--- a/locales/fr.json
+++ b/locales/fr.json
@@ -138,6 +138,6 @@
   "ui_flags": "Flags",
   "ui_room": "Room",
   "ui_radio_station": "Station de radio",
-  "ui_copied_rotation": "Copy rotations",
-  "ui_copy_rotation": "Copied rotations"
+  "ui_copied_rotation": "Rotation copiée",
+  "ui_copy_rotation": "Copier rotation"
 }
