--- a/locales/hu.json
+++ b/locales/hu.json
@@ -138,6 +138,6 @@
   "ui_flags": "Flag-ek",
   "ui_room": "Szoba",
   "ui_radio_station": "Rádió állomás",
-  "ui_copied_rotation": "Copy rotations",
-  "ui_copy_rotation": "Copied rotations"
+  "ui_copied_rotation": "Copied rotation",
+  "ui_copy_rotation": "Copy rotation"
 }
