--- a/locales/pt.json
+++ b/locales/pt.json
@@ -138,6 +138,6 @@
   "ui_flags": "Flags",
   "ui_room": "Divisão",
   "ui_radio_station": "Estação de rádio",
-  "ui_copied_rotation": "Copy rotations",
-  "ui_copy_rotation": "Copied rotations"
+  "ui_copied_rotation": "Copied rotation",
+  "ui_copy_rotation": "Copy rotation"
 }
