--- a/locales/pl.json
+++ b/locales/pl.json
@@ -138,6 +138,6 @@
   "ui_flags": "Flagi",
   "ui_room": "Pokój",
   "ui_radio_station": "Stacja radiowa",
-  "ui_copied_rotation": "Copy rotations",
-  "ui_copy_rotation": "Copied rotations"
+  "ui_copied_rotation": "Copied rotation",
+  "ui_copy_rotation": "Copy rotation"
 }
