feat(ui): update portal flags names to match Sollumz ones

--- a/locales/ar.json
+++ b/locales/ar.json
@@ -110,20 +110,20 @@
   "ui_add_entity_description": "أدخل اسم االشيء",
   "ui_delete_all_entities": "هل تريد حذف كافة الاشيء التي تم إنتاجها؟",
   "ui_amount": "كمية",
-  "ui_portal_flag_1": "تعطيل العرض الخارجي",
-  "ui_portal_flag_2": "تعطيل التقديم الداخلي",
-  "ui_portal_flag_4": "مرآة",
-  "ui_portal_flag_8": "ازدهار إضافي",
-  "ui_portal_flag_16": "مجهول 16",
-  "ui_portal_flag_32": "استخدم اللد الخارجي",
-  "ui_portal_flag_64": "إخفاء عند إغلاق الباب",
-  "ui_portal_flag_128": "غير معروف 128",
-  "ui_portal_flag_256": "بوابات خارجية عاكسة",
-  "ui_portal_flag_512": "غير معروف 512",
-  "ui_portal_flag_1024": "كيانات مرآة النسيان",
-  "ui_portal_flag_2048": "غير معروف 2048",
-  "ui_portal_flag_4096": "غير معروف 4096",
-  "ui_portal_flag_8192": "تعطيل farclipping",
+  "ui_portal_flag_1": "One Way",
+  "ui_portal_flag_2": "Link Interiors Together",
+  "ui_portal_flag_4": "Mirror",
+  "ui_portal_flag_8": "Disable Timecycle Modifier",
+  "ui_portal_flag_16": "Mirror Using Expensive Shaders",
+  "ui_portal_flag_32": "Low LOD Only",
+  "ui_portal_flag_64": "Hide when door closed",
+  "ui_portal_flag_128": "Mirror Can See Directional",
+  "ui_portal_flag_256": "Mirror Using Portal Traversal",
+  "ui_portal_flag_512": "Mirror Floor",
+  "ui_portal_flag_1024": "Mirror Can See Exterior View",
+  "ui_portal_flag_2048": "Water Surface",
+  "ui_portal_flag_4096": "Water Surface Extend To Horizon",
+  "ui_portal_flag_8192": "Use Light Bleed",
   "ui_update_warning": "التحديث متاح!",
   "ui_github": "افتح مستودع github",
   "ui_discord": "انضم إلى Dolu Discord",
