--- a/locales/da.json
+++ b/locales/da.json
@@ -110,20 +110,20 @@
   "ui_add_entity_description": "Indtast navnet på objektet",
   "ui_delete_all_entities": "Slet alle spawned objekter?",
   "ui_amount": "Beløb",
-  "ui_portal_flag_1": "Deaktiver eksteriør rendering",
-  "ui_portal_flag_2": "Deaktiver interiør rendering",
-  "ui_portal_flag_4": "Spejl",
-  "ui_portal_flag_8": "Ekstra bloom",
-  "ui_portal_flag_16": "Ukendt 16",
-  "ui_portal_flag_32": "Brug eksteriør LOD",
-  "ui_portal_flag_64": "Skjul når døren er lukket",
-  "ui_portal_flag_128": "Ukendt 128",
-  "ui_portal_flag_256": "Spejl eksteriørportaler",
-  "ui_portal_flag_512": "Ukendt 512",
-  "ui_portal_flag_1024": "Spejl limbo entityes",
-  "ui_portal_flag_2048": "Ukendt 2048",
-  "ui_portal_flag_4096": "Ukendt 4096",
-  "ui_portal_flag_8192": "Deaktiver fjernklipning",
+  "ui_portal_flag_1": "One Way",
+  "ui_portal_flag_2": "Link Interiors Together",
+  "ui_portal_flag_4": "Mirror",
+  "ui_portal_flag_8": "Disable Timecycle Modifier",
+  "ui_portal_flag_16": "Mirror Using Expensive Shaders",
+  "ui_portal_flag_32": "Low LOD Only",
+  "ui_portal_flag_64": "Hide when door closed",
+  "ui_portal_flag_128": "Mirror Can See Directional",
+  "ui_portal_flag_256": "Mirror Using Portal Traversal",
+  "ui_portal_flag_512": "Mirror Floor",
+  "ui_portal_flag_1024": "Mirror Can See Exterior View",
+  "ui_portal_flag_2048": "Water Surface",
+  "ui_portal_flag_4096": "Water Surface Extend To Horizon",
+  "ui_portal_flag_8192": "Use Light Bleed",
   "ui_update_warning": "Opdatering tilgængelig!",
   "ui_github": "Åbn Github Repository",
   "ui_discord": "Deltag i Dolu's Discord",
