--- a/locales/de.json
+++ b/locales/de.json
@@ -110,20 +110,20 @@
   "ui_add_entity_description": "Gib den Namen der Entität ein",
   "ui_delete_all_entities": "Alle gespawnten Entitäten löschen?",
   "ui_amount": "Anzahl",
-  "ui_portal_flag_1": "Deaktiviert die Außenanzeige",
-  "ui_portal_flag_2": "Deaktiviert die Innenanzeige",
-  "ui_portal_flag_4": "Spiegelung",
-  "ui_portal_flag_8": "Zusätzlicher Bloom",
-  "ui_portal_flag_16": "Unbekannt 16",
-  "ui_portal_flag_32": "Verwende Außen-LOD",
-  "ui_portal_flag_64": "Verstecke bei geschlossener Tür",
-  "ui_portal_flag_128": "Unbekannt 128",
-  "ui_portal_flag_256": "Spiegele Außenportale",
-  "ui_portal_flag_512": "Unbekannt 512",
-  "ui_portal_flag_1024": "Spiegele Limbo-Entitäten",
-  "ui_portal_flag_2048": "Unbekannt 2048",
-  "ui_portal_flag_4096": "Unbekannt 4096",
-  "ui_portal_flag_8192": "Deaktiviere Farbschnittstelle",
+  "ui_portal_flag_1": "One Way",
+  "ui_portal_flag_2": "Link Interiors Together",
+  "ui_portal_flag_4": "Mirror",
+  "ui_portal_flag_8": "Disable Timecycle Modifier",
+  "ui_portal_flag_16": "Mirror Using Expensive Shaders",
+  "ui_portal_flag_32": "Low LOD Only",
+  "ui_portal_flag_64": "Hide when door closed",
+  "ui_portal_flag_128": "Mirror Can See Directional",
+  "ui_portal_flag_256": "Mirror Using Portal Traversal",
+  "ui_portal_flag_512": "Mirror Floor",
+  "ui_portal_flag_1024": "Mirror Can See Exterior View",
+  "ui_portal_flag_2048": "Water Surface",
+  "ui_portal_flag_4096": "Water Surface Extend To Horizon",
+  "ui_portal_flag_8192": "Use Light Bleed",
   "ui_update_warning": "Update verfügbar!",
   "ui_github": "GitHub Repository öffnen",
   "ui_discord": "Dolu Discord beitreten",
