--- a/locales/fr.json
+++ b/locales/fr.json
@@ -110,20 +110,20 @@
   "ui_add_entity_description": "Entrer le nom du model",
   "ui_delete_all_entities": "Supprimer tout les objets ajoutés ?",
   "ui_amount": "Quantité",
-  "ui_portal_flag_1": "Désactive le rendu extérieur",
-  "ui_portal_flag_2": "Désactive le rendu intérieur",
-  "ui_portal_flag_4": "Miroir",
-  "ui_portal_flag_8": "Extra luminosité",
-  "ui_portal_flag_16": "Inconnu 16",
-  "ui_portal_flag_32": "Utilise les LOD à l'exterieur",
-  "ui_portal_flag_64": "Désactive le portail quand la porte est fermée",
-  "ui_portal_flag_128": "Inconnu 128",
-  "ui_portal_flag_256": "Active les portails exterieurs dans le mirroir",
-  "ui_portal_flag_512": "Inconnu 512",
-  "ui_portal_flag_1024": "Active les entités du limbo dans le mirroir",
-  "ui_portal_flag_2048": "Inconnu 2048",
-  "ui_portal_flag_4096": "Inconnu 4096",
-  "ui_portal_flag_8192": "Désactive le 'farclipping'",
+  "ui_portal_flag_1": "One Way",
+  "ui_portal_flag_2": "Link Interiors Together",
+  "ui_portal_flag_4": "Mirror",
+  "ui_portal_flag_8": "Disable Timecycle Modifier",
+  "ui_portal_flag_16": "Mirror Using Expensive Shaders",
+  "ui_portal_flag_32": "Low LOD Only",
+  "ui_portal_flag_64": "Hide when door closed",
+  "ui_portal_flag_128": "Mirror Can See Directional",
+  "ui_portal_flag_256": "Mirror Using Portal Traversal",
+  "ui_portal_flag_512": "Mirror Floor",
+  "ui_portal_flag_1024": "Mirror Can See Exterior View",
+  "ui_portal_flag_2048": "Water Surface",
+  "ui_portal_flag_4096": "Water Surface Extend To Horizon",
+  "ui_portal_flag_8192": "Use Light Bleed",
   "ui_update_warning": "Mise à jour disponible !",
   "ui_github": "Ouvrir le dépot Github",
   "ui_discord": "Rejoindre le discord de Dolu",
