--- a/locales/hu.json
+++ b/locales/hu.json
@@ -110,20 +110,20 @@
   "ui_add_entity_description": "Add meg a nevét az entitásnak",
   "ui_delete_all_entities": "Összes entitásnak törlése?",
   "ui_amount": "Összeg",
-  "ui_portal_flag_1": "Exterior renderelés letiltása",
-  "ui_portal_flag_2": "Interior renderelés letiltása",
-  "ui_portal_flag_4": "Tükör",
-  "ui_portal_flag_8": "Extra bloom",
-  "ui_portal_flag_16": "Ismeretlen 16",
-  "ui_portal_flag_32": "Exterior LOD használata",
-  "ui_portal_flag_64": "Elrejtés amikor az ajtó csukva",
-  "ui_portal_flag_128": "Ismeretlen 128",
-  "ui_portal_flag_256": "Tükör exterior portál",
-  "ui_portal_flag_512": "Ismeretlen 512",
-  "ui_portal_flag_1024": "Tükör limbo entitás",
-  "ui_portal_flag_2048": "Ismeretlen 2048",
-  "ui_portal_flag_4096": "Ismeretlen 4096",
-  "ui_portal_flag_8192": "Farclipping tiltás",
+  "ui_portal_flag_1": "One Way",
+  "ui_portal_flag_2": "Link Interiors Together",
+  "ui_portal_flag_4": "Mirror",
+  "ui_portal_flag_8": "Disable Timecycle Modifier",
+  "ui_portal_flag_16": "Mirror Using Expensive Shaders",
+  "ui_portal_flag_32": "Low LOD Only",
+  "ui_portal_flag_64": "Hide when door closed",
+  "ui_portal_flag_128": "Mirror Can See Directional",
+  "ui_portal_flag_256": "Mirror Using Portal Traversal",
+  "ui_portal_flag_512": "Mirror Floor",
+  "ui_portal_flag_1024": "Mirror Can See Exterior View",
+  "ui_portal_flag_2048": "Water Surface",
+  "ui_portal_flag_4096": "Water Surface Extend To Horizon",
+  "ui_portal_flag_8192": "Use Light Bleed",
   "ui_update_warning": "Elérhető frissítés!",
   "ui_github": "Github Repository megnyitása",
   "ui_discord": "Dolu Discord-hoz csatlakozás",
