--- a/locales/it.json
+++ b/locales/it.json
@@ -110,20 +110,20 @@
   "ui_add_entity_description": "Inserisci il nome dell'entità",
   "ui_delete_all_entities": "Eliminare tutte le entità generate?",
   "ui_amount": "Quantità",
-  "ui_portal_flag_1": "Disattiva rendering esterno",
-  "ui_portal_flag_2": "Disattiva rendering interno",
-  "ui_portal_flag_4": "Specchio",
-  "ui_portal_flag_8": "Luminosità extra",
-  "ui_portal_flag_16": "Sconosciuto 16",
-  "ui_portal_flag_32": "Usa LOD esterno",
-  "ui_portal_flag_64": "Nascondi quando la porta è chiusa",
-  "ui_portal_flag_128": "Sconosciuto 128",
-  "ui_portal_flag_256": "Specchia portali esterni",
-  "ui_portal_flag_512": "Sconosciuto 512",
-  "ui_portal_flag_1024": "Specchia entità del limbo",
-  "ui_portal_flag_2048": "Sconosciuto 2048",
-  "ui_portal_flag_4096": "Sconosciuto 4096",
-  "ui_portal_flag_8192": "Disattiva farclipping",
+  "ui_portal_flag_1": "One Way",
+  "ui_portal_flag_2": "Link Interiors Together",
+  "ui_portal_flag_4": "Mirror",
+  "ui_portal_flag_8": "Disable Timecycle Modifier",
+  "ui_portal_flag_16": "Mirror Using Expensive Shaders",
+  "ui_portal_flag_32": "Low LOD Only",
+  "ui_portal_flag_64": "Hide when door closed",
+  "ui_portal_flag_128": "Mirror Can See Directional",
+  "ui_portal_flag_256": "Mirror Using Portal Traversal",
+  "ui_portal_flag_512": "Mirror Floor",
+  "ui_portal_flag_1024": "Mirror Can See Exterior View",
+  "ui_portal_flag_2048": "Water Surface",
+  "ui_portal_flag_4096": "Water Surface Extend To Horizon",
+  "ui_portal_flag_8192": "Use Light Bleed",
   "ui_update_warning": "Aggiornamento disponibile!",
   "ui_github": "Apri repository Github",
   "ui_discord": "Unisciti a Dolu Discord",
