--- a/locales/ja.json
+++ b/locales/ja.json
@@ -110,20 +110,20 @@
   "ui_add_entity_description": "エンティティ名を入力",
   "ui_delete_all_entities": "全スポーン済みエンティティを削除？",
   "ui_amount": "量",
-  "ui_portal_flag_1": "外部レンダリングを無効化",
-  "ui_portal_flag_2": "内部レンダリングを無効化",
-  "ui_portal_flag_4": "ミラー",
-  "ui_portal_flag_8": "追加のブルーム効果",
-  "ui_portal_flag_16": "不明な16",
-  "ui_portal_flag_32": "外部LODを使用",
-  "ui_portal_flag_64": "ドアが閉じているとき非表示",
-  "ui_portal_flag_128": "不明な128",
-  "ui_portal_flag_256": "外部ポータルをミラーリング",
-  "ui_portal_flag_512": "不明な512",
-  "ui_portal_flag_1024": "リムボエンティティをミラーリング",
-  "ui_portal_flag_2048": "不明な2048",
-  "ui_portal_flag_4096": "不明な4096",
-  "ui_portal_flag_8192": "遠距離クリッピングを無効化",
+  "ui_portal_flag_1": "One Way",
+  "ui_portal_flag_2": "Link Interiors Together",
+  "ui_portal_flag_4": "Mirror",
+  "ui_portal_flag_8": "Disable Timecycle Modifier",
+  "ui_portal_flag_16": "Mirror Using Expensive Shaders",
+  "ui_portal_flag_32": "Low LOD Only",
+  "ui_portal_flag_64": "Hide when door closed",
+  "ui_portal_flag_128": "Mirror Can See Directional",
+  "ui_portal_flag_256": "Mirror Using Portal Traversal",
+  "ui_portal_flag_512": "Mirror Floor",
+  "ui_portal_flag_1024": "Mirror Can See Exterior View",
+  "ui_portal_flag_2048": "Water Surface",
+  "ui_portal_flag_4096": "Water Surface Extend To Horizon",
+  "ui_portal_flag_8192": "Use Light Bleed",
   "ui_update_warning": "アップデートが利用可能です！",
   "ui_github": "GitHubリポジトリを開く",
   "ui_discord": "Dolu Discordに参加する",
