--- a/locales/pl.json
+++ b/locales/pl.json
@@ -110,20 +110,20 @@
   "ui_add_entity_description": "Wprowadź nazwę podmiotu",
   "ui_delete_all_entities": "Usunąć wszystkie zespawnowane podmioty?",
   "ui_amount": "Ilość",
-  "ui_portal_flag_1": "Wyłącza widoczność exterioru",
-  "ui_portal_flag_2": "Wyłącza widoczność interioru",
-  "ui_portal_flag_4": "Lustro",
-  "ui_portal_flag_8": "Dodatkowe rozmycie",
-  "ui_portal_flag_16": "Nieznana 16",
-  "ui_portal_flag_32": "Użyj LOD exterioru",
-  "ui_portal_flag_64": "Ukryj gdy drzwi są zamknięte",
-  "ui_portal_flag_128": "Nieznana 128",
-  "ui_portal_flag_256": "Używaj portali exterioru",
-  "ui_portal_flag_512": "Nieznana 512",
-  "ui_portal_flag_1024": "Używaj podmioty limbo",
-  "ui_portal_flag_2048": "Nieznana 2048",
-  "ui_portal_flag_4096": "Nieznana4096",
-  "ui_portal_flag_8192": "Wyłącz farclipping",
+  "ui_portal_flag_1": "One Way",
+  "ui_portal_flag_2": "Link Interiors Together",
+  "ui_portal_flag_4": "Mirror",
+  "ui_portal_flag_8": "Disable Timecycle Modifier",
+  "ui_portal_flag_16": "Mirror Using Expensive Shaders",
+  "ui_portal_flag_32": "Low LOD Only",
+  "ui_portal_flag_64": "Hide when door closed",
+  "ui_portal_flag_128": "Mirror Can See Directional",
+  "ui_portal_flag_256": "Mirror Using Portal Traversal",
+  "ui_portal_flag_512": "Mirror Floor",
+  "ui_portal_flag_1024": "Mirror Can See Exterior View",
+  "ui_portal_flag_2048": "Water Surface",
+  "ui_portal_flag_4096": "Water Surface Extend To Horizon",
+  "ui_portal_flag_8192": "Use Light Bleed",
   "ui_update_warning": "Aktualizacja dostępna!",
   "ui_github": "Otwórz repozytorium Github",
   "ui_discord": "Dołącz na discord Dolu",
