--- a/locales/th.json
+++ b/locales/th.json
@@ -110,20 +110,20 @@
   "ui_add_entity_description": "ใส่ชื่อเอนทิตี้ที่จะเรียก",
   "ui_delete_all_entities": "ลบออปเจ็คทั้งหมดเลยใช่ไหม?",
   "ui_amount": "จำนวน",
-  "ui_portal_flag_1": "ปิดการเรนเดอร์เอ็กซ์ทีเรีย",
-  "ui_portal_flag_2": "ปิดการเรนเดอร์อินทีเรีย",
-  "ui_portal_flag_4": "สะท้อน (กระจก)",
-  "ui_portal_flag_8": "Extra bloom",
-  "ui_portal_flag_16": "Unknown 16",
-  "ui_portal_flag_32": "ใช้เอ็กซ์ทีเรีย LOD",
-  "ui_portal_flag_64": "ซ่อนเมื่อประตูถูกปิด",
-  "ui_portal_flag_128": "Unknown 128",
-  "ui_portal_flag_256": "สะท้อนเอ็กซ์ทีเรียพอร์ทัล",
-  "ui_portal_flag_512": "Unknown 512",
-  "ui_portal_flag_1024": "สะท้อน limbo เอนทิตี",
-  "ui_portal_flag_2048": "Unknown 2048",
-  "ui_portal_flag_4096": "Unknown 4096",
-  "ui_portal_flag_8192": "ปิดการใช้ farclipping",
+  "ui_portal_flag_1": "One Way",
+  "ui_portal_flag_2": "Link Interiors Together",
+  "ui_portal_flag_4": "Mirror",
+  "ui_portal_flag_8": "Disable Timecycle Modifier",
+  "ui_portal_flag_16": "Mirror Using Expensive Shaders",
+  "ui_portal_flag_32": "Low LOD Only",
+  "ui_portal_flag_64": "Hide when door closed",
+  "ui_portal_flag_128": "Mirror Can See Directional",
+  "ui_portal_flag_256": "Mirror Using Portal Traversal",
+  "ui_portal_flag_512": "Mirror Floor",
+  "ui_portal_flag_1024": "Mirror Can See Exterior View",
+  "ui_portal_flag_2048": "Water Surface",
+  "ui_portal_flag_4096": "Water Surface Extend To Horizon",
+  "ui_portal_flag_8192": "Use Light Bleed",
   "ui_update_warning": "มีอัพเดทใหม่!",
   "ui_github": "เปิด Github Repository",
   "ui_discord": "เข้าร่วมดิสคอร์ด Dolu ",
