--- a/locales/zh-tw.json
+++ b/locales/zh-tw.json
@@ -110,20 +110,20 @@
   "ui_add_entity_description": "輸入實體模型代碼",
   "ui_delete_all_entities": "刪除所有已生成的實體模型?",
   "ui_amount": "數量",
-  "ui_portal_flag_1": "禁用外部渲染",
-  "ui_portal_flag_2": "禁用內部渲染",
-  "ui_portal_flag_4": "可反射屬性",
-  "ui_portal_flag_8": "額外bloom效果",
-  "ui_portal_flag_16": "16 號未知屬性",
-  "ui_portal_flag_32": "使用外部 LOD",
-  "ui_portal_flag_64": "當門關閉時隱藏",
-  "ui_portal_flag_128": "128 號未知屬性",
-  "ui_portal_flag_256": "鏡麵外部門戶",
-  "ui_portal_flag_512": "512 號未知屬性",
-  "ui_portal_flag_1024": "鏡像地獄實體",
-  "ui_portal_flag_2048": "2048 號未知屬性",
-  "ui_portal_flag_4096": "Unknown 4096 號未知屬性",
-  "ui_portal_flag_8192": "禁用遠部剪切",
+  "ui_portal_flag_1": "One Way",
+  "ui_portal_flag_2": "Link Interiors Together",
+  "ui_portal_flag_4": "Mirror",
+  "ui_portal_flag_8": "Disable Timecycle Modifier",
+  "ui_portal_flag_16": "Mirror Using Expensive Shaders",
+  "ui_portal_flag_32": "Low LOD Only",
+  "ui_portal_flag_64": "Hide when door closed",
+  "ui_portal_flag_128": "Mirror Can See Directional",
+  "ui_portal_flag_256": "Mirror Using Portal Traversal",
+  "ui_portal_flag_512": "Mirror Floor",
+  "ui_portal_flag_1024": "Mirror Can See Exterior View",
+  "ui_portal_flag_2048": "Water Surface",
+  "ui_portal_flag_4096": "Water Surface Extend To Horizon",
+  "ui_portal_flag_8192": "Use Light Bleed",
   "ui_update_warning": "可用更新!",
   "ui_github": "打開Github存儲庫",
   "ui_discord": "加入Dolu的Discord群組",
