--- a/locales/cs.json
+++ b/locales/cs.json
@@ -110,20 +110,20 @@
   "ui_add_entity_description": "Zadej jméno přidávaného objektu",
   "ui_delete_all_entities": "Smazat všechny spawnuté objekty?",
   "ui_amount": "Množství",
-  "ui_portal_flag_1": "Vypnout render exteriéru",
-  "ui_portal_flag_2": "Vypnout render interiéru",
-  "ui_portal_flag_4": "Odrazy (zrcadlo)",
-  "ui_portal_flag_8": "Extra bloom",
-  "ui_portal_flag_16": "Unknown 16",
-  "ui_portal_flag_32": "Použít LOD exteriéru",
-  "ui_portal_flag_64": "Skrýt, když jsou zavřené dveře.",
-  "ui_portal_flag_128": "Unknown 128",
-  "ui_portal_flag_256": "Odrazy exteriérových portálů",
-  "ui_portal_flag_512": "Unknown 512",
-  "ui_portal_flag_1024": "Odrazy objektů v limbu",
-  "ui_portal_flag_2048": "Unknown 2048",
-  "ui_portal_flag_4096": "Unknown 4096",
-  "ui_portal_flag_8192": "Vypnout farclipping",
+  "ui_portal_flag_1": "One Way",
+  "ui_portal_flag_2": "Link Interiors Together",
+  "ui_portal_flag_4": "Mirror",
+  "ui_portal_flag_8": "Disable Timecycle Modifier",
+  "ui_portal_flag_16": "Mirror Using Expensive Shaders",
+  "ui_portal_flag_32": "Low LOD Only",
+  "ui_portal_flag_64": "Hide when door closed",
+  "ui_portal_flag_128": "Mirror Can See Directional",
+  "ui_portal_flag_256": "Mirror Using Portal Traversal",
+  "ui_portal_flag_512": "Mirror Floor",
+  "ui_portal_flag_1024": "Mirror Can See Exterior View",
+  "ui_portal_flag_2048": "Water Surface",
+  "ui_portal_flag_4096": "Water Surface Extend To Horizon",
+  "ui_portal_flag_8192": "Use Light Bleed",
   "ui_update_warning": "Aktualizace k dispozici!",
   "ui_github": "Otevřít GitHub repozitář",
   "ui_discord": "Otevřít Dolu Discord",
