--- a/locales/en.json
+++ b/locales/en.json
@@ -110,20 +110,20 @@
   "ui_add_entity_description": "Enter the name of the entity",
   "ui_delete_all_entities": "Delete all spawned entities?",
   "ui_amount": "Amount",
-  "ui_portal_flag_1": "Disables exterior rendering",
-  "ui_portal_flag_2": "Disables interior rendering",
+  "ui_portal_flag_1": "One Way",
+  "ui_portal_flag_2": "Link Interiors Together",
   "ui_portal_flag_4": "Mirror",
-  "ui_portal_flag_8": "Extra bloom",
-  "ui_portal_flag_16": "Unknown 16",
-  "ui_portal_flag_32": "Use exterior LOD",
+  "ui_portal_flag_8": "Disable Timecycle Modifier",
+  "ui_portal_flag_16": "Mirror Using Expensive Shaders",
+  "ui_portal_flag_32": "Low LOD Only",
   "ui_portal_flag_64": "Hide when door closed",
-  "ui_portal_flag_128": "Unknown 128",
-  "ui_portal_flag_256": "Mirror exterior portals",
-  "ui_portal_flag_512": "Unknown 512",
-  "ui_portal_flag_1024": "Mirror limbo entities",
-  "ui_portal_flag_2048": "Unknown 2048",
-  "ui_portal_flag_4096": "Unknown 4096",
-  "ui_portal_flag_8192": "Disable farclipping",
+  "ui_portal_flag_128": "Mirror Can See Directional",
+  "ui_portal_flag_256": "Mirror Using Portal Traversal",
+  "ui_portal_flag_512": "Mirror Floor",
+  "ui_portal_flag_1024": "Mirror Can See Exterior View",
+  "ui_portal_flag_2048": "Water Surface",
+  "ui_portal_flag_4096": "Water Surface Extend To Horizon",
+  "ui_portal_flag_8192": "Use Light Bleed",
   "ui_update_warning": "Update available!",
   "ui_github": "Open Github Repository",
   "ui_discord": "Join Dolu Discord",
