--- a/locales/es.json
+++ b/locales/es.json
@@ -110,20 +110,20 @@
   "ui_add_entity_description": "Ingresa el nombre de la entidad",
   "ui_delete_all_entities": "¿Eliminar todas las entidades generadas?",
   "ui_amount": "Cantidad",
-  "ui_portal_flag_1": "Desactiva renderizado exterior",
-  "ui_portal_flag_2": "Desactiva renderizado interior",
-  "ui_portal_flag_4": "Espejo",
-  "ui_portal_flag_8": "Brillo adicional",
-  "ui_portal_flag_16": "Desconocido 16",
-  "ui_portal_flag_32": "Usar LOD exterior",
-  "ui_portal_flag_64": "Ocultar cuando la puerta está cerrada",
-  "ui_portal_flag_128": "Desconocido 128",
-  "ui_portal_flag_256": "Espejar portales exteriores",
-  "ui_portal_flag_512": "Desconocido 512",
-  "ui_portal_flag_1024": "Espejar entidades en el limbo",
-  "ui_portal_flag_2048": "Desconocido 2048",
-  "ui_portal_flag_4096": "Desconocido 4096",
-  "ui_portal_flag_8192": "Desactivar farclipping",
+  "ui_portal_flag_1": "One Way",
+  "ui_portal_flag_2": "Link Interiors Together",
+  "ui_portal_flag_4": "Mirror",
+  "ui_portal_flag_8": "Disable Timecycle Modifier",
+  "ui_portal_flag_16": "Mirror Using Expensive Shaders",
+  "ui_portal_flag_32": "Low LOD Only",
+  "ui_portal_flag_64": "Hide when door closed",
+  "ui_portal_flag_128": "Mirror Can See Directional",
+  "ui_portal_flag_256": "Mirror Using Portal Traversal",
+  "ui_portal_flag_512": "Mirror Floor",
+  "ui_portal_flag_1024": "Mirror Can See Exterior View",
+  "ui_portal_flag_2048": "Water Surface",
+  "ui_portal_flag_4096": "Water Surface Extend To Horizon",
+  "ui_portal_flag_8192": "Use Light Bleed",
   "ui_update_warning": "¡Actualización disponible!",
   "ui_github": "Abrir repositorio en Github",
   "ui_discord": "Únete al Discord de Dolu",
