--- a/locales/zh-cn.json
+++ b/locales/zh-cn.json
@@ -110,20 +110,20 @@
   "ui_add_entity_description": "输入实体模型代码",
   "ui_delete_all_entities": "删除所有已生成的实体模型?",
   "ui_amount": "数量",
-  "ui_portal_flag_1": "禁用外部渲染",
-  "ui_portal_flag_2": "禁用内部渲染",
-  "ui_portal_flag_4": "可反射属性",
-  "ui_portal_flag_8": "额外bloom效果",
-  "ui_portal_flag_16": "16 号未知属性",
-  "ui_portal_flag_32": "使用外部 LOD",
-  "ui_portal_flag_64": "当门关闭时隐藏",
-  "ui_portal_flag_128": "128 号未知属性",
-  "ui_portal_flag_256": "镜面外部门户",
-  "ui_portal_flag_512": "512 号未知属性",
-  "ui_portal_flag_1024": "镜像地狱实体",
-  "ui_portal_flag_2048": "2048 号未知属性",
-  "ui_portal_flag_4096": "Unknown 4096 号未知属性",
-  "ui_portal_flag_8192": "禁用远部剪切",
+  "ui_portal_flag_1": "One Way",
+  "ui_portal_flag_2": "Link Interiors Together",
+  "ui_portal_flag_4": "Mirror",
+  "ui_portal_flag_8": "Disable Timecycle Modifier",
+  "ui_portal_flag_16": "Mirror Using Expensive Shaders",
+  "ui_portal_flag_32": "Low LOD Only",
+  "ui_portal_flag_64": "Hide when door closed",
+  "ui_portal_flag_128": "Mirror Can See Directional",
+  "ui_portal_flag_256": "Mirror Using Portal Traversal",
+  "ui_portal_flag_512": "Mirror Floor",
+  "ui_portal_flag_1024": "Mirror Can See Exterior View",
+  "ui_portal_flag_2048": "Water Surface",
+  "ui_portal_flag_4096": "Water Surface Extend To Horizon",
+  "ui_portal_flag_8192": "Use Light Bleed",
   "ui_update_warning": "可用更新!",
   "ui_github": "打开Github存储库",
   "ui_discord": "加入Dolu的Discord群组",
