miscs(ui): add ko-fi support URL

--- a/locales/ar.json
+++ b/locales/ar.json
@@ -127,6 +127,7 @@
   "ui_update_warning": "التحديث متاح!",
   "ui_github": "افتح مستودع github",
   "ui_discord": "انضم إلى Dolu Discord",
+  "ui_support": "Support me",
   "ui_audio": "صوتي",
   "ui_static_emitters": "بواعث ثابتة",
   "ui_draw_static_emitters": "عرض بواعث ثابتة",
