--- a/locales/da.json
+++ b/locales/da.json
@@ -127,6 +127,7 @@
   "ui_update_warning": "Opdatering tilgængelig!",
   "ui_github": "Åbn Github Repository",
   "ui_discord": "Deltag i Dolu's Discord",
+  "ui_support": "Support me",
   "ui_audio": "Lyd",
   "ui_static_emitters": "Statisk emitters",
   "ui_draw_static_emitters": "Vis statiske emitters",
