--- a/locales/es.json
+++ b/locales/es.json
@@ -127,6 +127,7 @@
   "ui_update_warning": "¡Actualización disponible!",
   "ui_github": "Abrir repositorio en Github",
   "ui_discord": "Únete al Discord de Dolu",
+  "ui_support": "Support me",
   "ui_audio": "Audio",
   "ui_static_emitters": "Emisores estáticos",
   "ui_draw_static_emitters": "Mostrar emisores estáticos",
