--- a/locales/fr.json
+++ b/locales/fr.json
@@ -127,6 +127,7 @@
   "ui_update_warning": "Mise à jour disponible !",
   "ui_github": "Ouvrir le dépot Github",
   "ui_discord": "Rejoindre le discord de Dolu",
+  "ui_support": "Support me",
   "ui_audio": "Audio",
   "ui_static_emitters": "Static Emitters",
   "ui_draw_static_emitters": "Afficher les static emitters",
