--- a/locales/hu.json
+++ b/locales/hu.json
@@ -127,6 +127,7 @@
   "ui_update_warning": "Elérhető frissítés!",
   "ui_github": "Github Repository megnyitása",
   "ui_discord": "Dolu Discord-hoz csatlakozás",
+  "ui_support": "Support me",
   "ui_audio": "Hang",
   "ui_static_emitters": "Statikus emitterek",
   "ui_draw_static_emitters": "Statikus emitterek mutatása",
