--- a/locales/ja.json
+++ b/locales/ja.json
@@ -127,6 +127,7 @@
   "ui_update_warning": "アップデートが利用可能です！",
   "ui_github": "GitHubリポジトリを開く",
   "ui_discord": "Dolu Discordに参加する",
+  "ui_support": "Support me",
   "ui_audio": "オーディオ",
   "ui_static_emitters": "静的エミッター",
   "ui_draw_static_emitters": "静的エミッターを表示する",
