--- a/locales/th.json
+++ b/locales/th.json
@@ -127,6 +127,7 @@
   "ui_update_warning": "มีอัพเดทใหม่!",
   "ui_github": "เปิด Github Repository",
   "ui_discord": "เข้าร่วมดิสคอร์ด Dolu ",
+  "ui_support": "Support me",
   "ui_audio": "เสียง",
   "ui_static_emitters": "อิมิเตอร์อยู่กับที่ ",
   "ui_draw_static_emitters": "แสดงอิมิเตอร์ที่อยู่กับที่",
