--- a/locales/zh-cn.json
+++ b/locales/zh-cn.json
@@ -127,6 +127,7 @@
   "ui_update_warning": "可用更新!",
   "ui_github": "打开Github存储库",
   "ui_discord": "加入Dolu的Discord群组",
+  "ui_support": "Support me",
   "ui_audio": "世界音效",
   "ui_static_emitters": "静态发射器",
   "ui_draw_static_emitters": "显示静态发射器",
