--- a/locales/zh-tw.json
+++ b/locales/zh-tw.json
@@ -127,6 +127,7 @@
   "ui_update_warning": "可用更新!",
   "ui_github": "打開Github存儲庫",
   "ui_discord": "加入Dolu的Discord群組",
+  "ui_support": "Support me",
   "ui_audio": "世界音效",
   "ui_static_emitters": "靜態髮射器",
   "ui_draw_static_emitters": "顯示靜態髮射器",
