--- a/locales/cs.json
+++ b/locales/cs.json
@@ -127,6 +127,7 @@
   "ui_update_warning": "Aktualizace k dispozici!",
   "ui_github": "Otevřít GitHub repozitář",
   "ui_discord": "Otevřít Dolu Discord",
+  "ui_support": "Support me",
   "ui_audio": "Zvuky/audio",
   "ui_static_emitters": "Statická vyzařování",
   "ui_draw_static_emitters": "Zobrazit statická vyzařování",
