--- a/locales/de.json
+++ b/locales/de.json
@@ -127,6 +127,7 @@
   "ui_update_warning": "Update verfügbar!",
   "ui_github": "GitHub Repository öffnen",
   "ui_discord": "Dolu Discord beitreten",
+  "ui_support": "Support me",
   "ui_audio": "Audio",
   "ui_static_emitters": "Statische Emitter",
   "ui_draw_static_emitters": "Statische Emitter anzeigen",
