--- a/locales/en.json
+++ b/locales/en.json
@@ -127,6 +127,7 @@
   "ui_update_warning": "Update available!",
   "ui_github": "Open Github Repository",
   "ui_discord": "Join Dolu Discord",
+  "ui_support": "Support me",
   "ui_audio": "Audio",
   "ui_static_emitters": "Static Emitters",
   "ui_draw_static_emitters": "Show static emitters",
