--- a/locales/it.json
+++ b/locales/it.json
@@ -127,6 +127,7 @@
   "ui_update_warning": "Aggiornamento disponibile!",
   "ui_github": "Apri repository Github",
   "ui_discord": "Unisciti a Dolu Discord",
+  "ui_support": "Support me",
   "ui_audio": "Audio",
   "ui_static_emitters": "Emettitori statici",
   "ui_draw_static_emitters": "Mostra emettitori statici",
