--- a/locales/pl.json
+++ b/locales/pl.json
@@ -127,6 +127,7 @@
   "ui_update_warning": "Aktualizacja dostępna!",
   "ui_github": "Otwórz repozytorium Github",
   "ui_discord": "Dołącz na discord Dolu",
+  "ui_support": "Support me",
   "ui_audio": "Audio",
   "ui_static_emitters": "Emitery statyczne",
   "ui_draw_static_emitters": "Pokaż statyczne emitery",
