--- a/locales/pt.json
+++ b/locales/pt.json
@@ -127,6 +127,7 @@
   "ui_update_warning": "Actualização disponível!",
   "ui_github": "Abrir Repositório Github",
   "ui_discord": "Entrar no Discord",
+  "ui_support": "Support me",
   "ui_audio": "Áudio",
   "ui_static_emitters": "Emissores estáticos",
   "ui_draw_static_emitters": "Mostrar emissores estáticos",
